@@ -1,278 +1,196 @@
 package edu.pucmm.controller;
 
-import com.mongodb.client.FindIterable;
-import com.mongodb.client.model.Sorts;
-import io.javalin.Javalin;
-import io.javalin.http.Context;
-
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mongodb.client.MongoCollection;
 import com.mongodb.client.model.Filters;
-import com.mongodb.client.result.DeleteResult;
-import com.mongodb.client.result.InsertOneResult;
-import com.mongodb.client.result.UpdateResult;
-
+import io.javalin.Javalin;
+import io.javalin.http.BadRequestResponse;
+import io.javalin.http.NotFoundResponse;
 import org.bson.Document;
-import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
 
-import edu.pucmm.model.Property;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
-import java.util.*;
-
-/**
- * Controller de Propiedades (versión compatible con:
- *   new PropertyController(properties).register(app);
- *
- * Cambios soportados:
- *  - type ∈ {Casa, Apartamento, Penthouse, Solares, Villa}
- *  - units[].area (double)
- *  - latitude / longitude (double)
- */
 public class PropertyController {
 
-    private final MongoCollection<Document> properties;
+    private final MongoCollection<Document> collection;
+    private final ObjectMapper mapper = new ObjectMapper();
 
-    private static final Set<String> ALLOWED_TYPES = new HashSet<>(Arrays.asList(
+    // Tipos permitidos
+    private static final List<String> ALLOWED_TYPES = List.of(
             "Casa", "Apartamento", "Penthouse", "Solares", "Villa"
-    ));
+    );
 
-    public PropertyController(MongoCollection<Document> properties) {
-        this.properties = properties;
+    public PropertyController(MongoCollection<Document> collection) {
+        this.collection = collection;
     }
 
-    /** Registra endpoints en Javalin */
     public void register(Javalin app) {
 
-        // LISTAR
-        app.get("/api/properties", ctx -> {
-            List<Map<String, Object>> out = new ArrayList<>();
-            FindIterable<Document> it = properties.find().sort(Sorts.descending("createdAt")).limit(100);
-            for (Document d : it) {
-                Map<String, Object> m = new LinkedHashMap<>(d);
-                m.put("id", d.getObjectId("_id").toHexString());
-                m.remove("_id");
-                out.add(m);
-            }
-            ctx.json(out);
-        });
-
-
-        // OBTENER POR ID
-        app.get("/api/properties/:id", ctx -> {
-            String id = ctx.pathParam("id");
-            Document d = properties.find(Filters.eq("_id", new ObjectId(id))).first();
-            if (d == null) {
-                ctx.status(404).result("Not Found");
-                return;
-            }
-            Map<String, Object> m = new LinkedHashMap<>(d);
-            m.put("id", d.getObjectId("_id").toHexString());
-            m.remove("_id");
-            ctx.json(m);
-        });
-
-        // CREAR
+        // -------- CREATE --------
         app.post("/api/properties", ctx -> {
-            Property property = ctx.bodyAsClass(Property.class);
-            List<String> errors = validateRequired(property);
-            if (!errors.isEmpty()) {
-                ctx.status(400).json(Map.of("errors", errors));
-                return;
+            Map<String, Object> body = parseBody(ctx.body());
+            String title    = reqStr(body.get("title"), "title");
+            String type     = reqStr(body.get("type"), "type");
+            String saleType = reqStr(body.get("saleType"), "saleType");
+
+            if (!ALLOWED_TYPES.contains(type)) {
+                throw new BadRequestResponse("type inválido. Permitidos: " + ALLOWED_TYPES);
             }
 
-            Document doc = Document.parse(ctx.body());
-            doc.putIfAbsent("createdAt", new Date());
-
-            InsertOneResult res = properties.insertOne(doc);
-            String id = res.getInsertedId().asObjectId().getValue().toHexString();
-
+            Document doc = buildDocFromBody(body);
+            collection.insertOne(doc);
+            String id = doc.getObjectId("_id").toHexString();
             ctx.status(201).json(Map.of("id", id, "message", "created"));
         });
 
-        // ACTUALIZAR
-        app.put("/api/properties/:id", ctx -> {
-            String id = ctx.pathParam("id");
-            ObjectId objectId = parseObjectIdOrNull(id);
-            if (objectId == null) {
-                ctx.status(400).result("Invalid id");
-                return;
-            }
-
-            Document body = parseBodyAsDocument(ctx);
-
-            List<String> errors = validateAndNormalize(body);
-            if (!errors.isEmpty()) {
-                ctx.status(400).json(Map.of("ok", false, "errors", errors));
-                return;
-            }
-
-            // Mantén estos sets como ya los tengas…
-            body.put("updatedAt", new Date());
-
-            Bson filter = Filters.eq("_id", objectId);
-            Document update = new Document("$set", body);
-
-            UpdateResult res = properties.updateOne(filter, update);
-            if (res.getMatchedCount() == 0) {
-                ctx.status(404).result("Not Found");
-                return;
-            }
-
-            Document updated = properties.find(filter).first();
-            ctx.json(normalizeId(updated)); // <- devolver con _id string
+        // -------- LIST --------
+        app.get("/api/properties", ctx -> {
+            var results = collection.find()
+                    .map(d -> {
+                        d.put("id", d.getObjectId("_id").toHexString());
+                        d.remove("_id");
+                        return d;
+                    })
+                    .into(new ArrayList<>());
+            ctx.json(results);
         });
 
-        // ELIMINAR
-        app.delete("/api/properties/:id", ctx -> {
+        // -------- DETAIL -------- (Javalin 4: {id})
+        app.get("/api/properties/{id}", ctx -> {
+            Document d = findByIdOrFail(ctx.pathParam("id"));
+            d.put("id", d.getObjectId("_id").toHexString());
+            d.remove("_id");
+            ctx.json(d);
+        });
+
+        // -------- UPDATE -------- (para admin.js)
+        app.put("/api/properties/{id}", ctx -> {
             String id = ctx.pathParam("id");
-            ObjectId objectId = parseObjectIdOrNull(id);
-            if (objectId == null) {
-                ctx.status(400).result("Invalid id");
-                return;
-            }
-            DeleteResult res = properties.deleteOne(Filters.eq("_id", objectId));
-            if (res.getDeletedCount() == 0) {
-                ctx.status(404).result("Not Found");
-            } else {
-                ctx.json(Map.of("ok", true));
-            }
+            Map<String, Object> body = parseBody(ctx.body());
+
+            ObjectId oid = parseOid(id);
+            Document set = buildDocFromBody(body);
+
+            if (set.isEmpty()) throw new BadRequestResponse("Nada para actualizar");
+            var res = collection.updateOne(Filters.eq("_id", oid), new Document("$set", set));
+            if (res.getMatchedCount() == 0) throw new NotFoundResponse("No existe");
+
+            ctx.json(Map.of("id", id, "message", "updated"));
+        });
+
+        // -------- DELETE -------- (para admin.js)
+        app.delete("/api/properties/{id}", ctx -> {
+            ObjectId oid = parseOid(ctx.pathParam("id"));
+            var res = collection.deleteOne(Filters.eq("_id", oid));
+            if (res.getDeletedCount() == 0) throw new NotFoundResponse("No existe");
+            ctx.json(Map.of("message", "deleted"));
         });
     }
 
-    // -------------------------
-    // Helpers
-    // -------------------------
+    // ================= Helpers =================
 
-    private static ObjectId parseObjectIdOrNull(String id) {
+    private Map<String, Object> parseBody(String body) {
         try {
-            return new ObjectId(id);
+            return mapper.readValue(body, new TypeReference<Map<String, Object>>() {});
         } catch (Exception e) {
-            return null;
+            throw new BadRequestResponse("JSON inválido: " + e.getMessage());
         }
     }
 
-    private static Document parseBodyAsDocument(Context ctx) {
-        String raw = ctx.body();
-        if (raw == null || raw.isBlank()) {
-            return new Document();
-        }
-        return Document.parse(raw);
+    private String reqStr(Object v, String field) {
+        String s = (v == null) ? null : String.valueOf(v).trim();
+        if (s == null || s.isBlank()) throw new BadRequestResponse("El campo '" + field + "' es requerido");
+        return s;
     }
-    private Document normalizeId(Document doc) {
-        if (doc == null) return null;
-        Document out = new Document(doc); // copia
-        Object val = out.get("_id");
-        if (val instanceof ObjectId) {
-            out.put("_id", ((ObjectId) val).toHexString());
-        } else if (val != null) {
-            // Si viene serializado raro, intenta extraer el hex 24
-            String s = String.valueOf(val);
-            java.util.regex.Matcher m = java.util.regex.Pattern
-                    .compile("[0-9a-fA-F]{24}")
-                    .matcher(s);
-            if (m.find()) out.put("_id", m.group());
-        }
-        return out;
+
+    private ObjectId parseOid(String id) {
+        try { return new ObjectId(id); }
+        catch (IllegalArgumentException e) { throw new BadRequestResponse("ID inválido"); }
     }
-    /**
-     * Normaliza y valida:
-     * - type ∈ {Casa, Apartamento, Penthouse, Solares, Villa}
-     * - latitude / longitude como Double
-     * - units[].area como Double
-     */
-    private static List<String> validateAndNormalize(Document body) {
-        List<String> errors = new ArrayList<>();
 
-        // TYPE
-        if (body.containsKey("type")) {
-            Object t = body.get("type");
-            if (t == null) {
-                errors.add("type no puede ser null");
-            } else {
-                String typeStr = String.valueOf(t).trim();
-                if (!ALLOWED_TYPES.contains(typeStr)) {
-                    errors.add("type inválido. Permitidos: " + String.join(", ", ALLOWED_TYPES));
-                } else {
-                    body.put("type", typeStr);
-                }
-            }
-        }
+    private Document buildDocFromBody(Map<String, Object> body) {
+        Number price     = toNumber(body.get("price"));
+        Integer bedrooms = toInteger(body.get("bedrooms"));
+        Integer bathrooms= toInteger(body.get("bathrooms"));
+        Integer parking  = toInteger(body.get("parking"));
+        Integer area     = toInteger(body.get("area"));
+        Double latitude  = toDouble(body.get("latitude"));
+        Double longitude = toDouble(body.get("longitude"));
 
-        // LAT / LNG
-        coerceNumber(body, "latitude", errors);
-        coerceNumber(body, "longitude", errors);
+        List<String> features  = toStringList(body.get("features"));
+        List<String> amenities = toStringList(body.get("amenities"));
+        List<String> images    = toStringList(body.get("images"));
 
-        // PRICE / AREA generales (opcionales)
-        coerceNumber(body, "price", errors);
-        coerceNumber(body, "area", errors);
-
-        // UNITS
         Object unitsObj = body.get("units");
-        if (unitsObj instanceof List<?>) {
-            @SuppressWarnings("unchecked")
-            List<Object> rawUnits = (List<Object>) unitsObj;
+        List<?> units = (unitsObj instanceof List) ? (List<?>) unitsObj : null;
 
-            List<Document> normalizedUnits = new ArrayList<>();
+        Document doc = new Document();
+        putIfNotBlank(doc, "title", body.get("title"));
+        putIfNotBlank(doc, "type", body.get("type"));
+        putIfNotBlank(doc, "saleType", body.get("saleType"));
+        putIfNotBlank(doc, "address", body.get("address"));
+        putIfNotBlank(doc, "descriptionParagraph", body.get("descriptionParagraph"));
 
-            for (int i = 0; i < rawUnits.size(); i++) {
-                Object u = rawUnits.get(i);
-                if (u instanceof Map<?, ?>) {
-                    // Copiar con putAll para evitar problemas de generics
-                    @SuppressWarnings("unchecked")
-                    Map<String, Object> asMap = (Map<String, Object>) u;
+        if (price != null)     doc.append("price", price);
+        if (bedrooms != null)  doc.append("bedrooms", bedrooms);
+        if (bathrooms != null) doc.append("bathrooms", bathrooms);
+        if (parking != null)   doc.append("parking", parking);
+        if (area != null)      doc.append("area", area);
+        if (latitude != null)  doc.append("latitude", latitude);
+        if (longitude != null) doc.append("longitude", longitude);
+        if (!features.isEmpty())  doc.append("features", features);
+        if (!amenities.isEmpty()) doc.append("amenities", amenities);
+        if (!images.isEmpty())    doc.append("images", images);
+        if (units != null)        doc.append("units", units);
 
-                    Document unit = new Document();
-                    unit.putAll(asMap);
-
-                    coerceNumber(unit, "floor", errors, "units[" + i + "].floor");
-                    coerceNumber(unit, "bedrooms", errors, "units[" + i + "].bedrooms");
-                    coerceNumber(unit, "bathrooms", errors, "units[" + i + "].bathrooms");
-                    coerceNumber(unit, "parking", errors, "units[" + i + "].parking");
-                    coerceNumber(unit, "price", errors, "units[" + i + "].price");
-                    coerceNumber(unit, "area", errors, "units[" + i + "].area"); // NUEVO
-
-                    normalizedUnits.add(unit);
-                } else {
-                    errors.add("units[" + i + "] debe ser un objeto");
-                }
-            }
-            body.put("units", normalizedUnits);
-        } else if (unitsObj != null) {
-            errors.add("units debe ser un arreglo");
-        }
-
-        return errors;
+        return doc;
     }
 
-    private static List<String> validateRequired(Property p) {
-        List<String> errors = new ArrayList<>();
-        if (p.getTitle() == null || p.getTitle().isBlank()) errors.add("title es requerido");
-        if (p.getType() == null || p.getType().isBlank()) errors.add("type es requerido");
-        if (p.getSaleType() == null || p.getSaleType().isBlank()) errors.add("saleType es requerido");
-        if (p.getPrice() == null) errors.add("price es requerido");
-        if (p.getBedrooms() == null) errors.add("bedrooms es requerido");
-        if (p.getBathrooms() == null) errors.add("bathrooms es requerido");
-        if (p.getParking() == null) errors.add("parking es requerido");
-        return errors;
-    }
-
-    private static void coerceNumber(Document doc, String key, List<String> errors) {
-        coerceNumber(doc, key, errors, key);
-    }
-
-    private static void coerceNumber(Document doc, String key, List<String> errors, String label) {
-        if (!doc.containsKey(key)) return;
-
-        Object val = doc.get(key);
+    private void putIfNotBlank(Document d, String key, Object val) {
         if (val == null) return;
+        String s = String.valueOf(val).trim();
+        if (!s.isBlank()) d.append(key, s);
+    }
 
-        if (val instanceof Number) return;
-
+    private static Number toNumber(Object o) {
+        if (o == null) return null;
+        if (o instanceof Number n) return n;
         try {
-            double d = Double.parseDouble(String.valueOf(val).trim());
-            doc.put(key, d);
-        } catch (Exception e) {
-            errors.add(label + " debe ser numérico (recibido: " + val + ")");
+            String s = String.valueOf(o);
+            return s.contains(".") ? Double.parseDouble(s) : Long.parseLong(s);
+        } catch (NumberFormatException e) { return null; }
+    }
+
+    private static Integer toInteger(Object o) {
+        Number n = toNumber(o);
+        return (n == null) ? null : n.intValue();
+    }
+
+    private static Double toDouble(Object o) {
+        Number n = toNumber(o);
+        return (n == null) ? null : n.doubleValue();
+    }
+
+    @SuppressWarnings("unchecked")
+    private static List<String> toStringList(Object o) {
+        if (o == null) return List.of();
+        if (o instanceof List<?> list) {
+            List<String> out = new ArrayList<>(list.size());
+            for (Object item : list) if (item != null) out.add(String.valueOf(item));
+            return out;
         }
+        if (o instanceof String s) return s.isBlank() ? List.of() : List.of(s);
+        return List.of();
+    }
+
+    private Document findByIdOrFail(String id) {
+        ObjectId oid = parseOid(id);
+        Document d = collection.find(Filters.eq("_id", oid)).first();
+        if (d == null) throw new NotFoundResponse("No existe");
+        return d;
     }
 }
